--- a/genindex.html
+++ b/genindex.html
@@ -250,7 +250,7 @@
           
 <section class="genindex-section">
   <h1 id="index">Index</h1>
-  <div class="genindex-jumpbox"><a href="#_"><strong>_</strong></a> | <a href="#A"><strong>A</strong></a> | <a href="#C"><strong>C</strong></a> | <a href="#D"><strong>D</strong></a> | <a href="#E"><strong>E</strong></a> | <a href="#G"><strong>G</strong></a> | <a href="#I"><strong>I</strong></a> | <a href="#L"><strong>L</strong></a> | <a href="#O"><strong>O</strong></a> | <a href="#P"><strong>P</strong></a> | <a href="#S"><strong>S</strong></a> | <a href="#T"><strong>T</strong></a></div>
+  <div class="genindex-jumpbox"><a href="#_"><strong>_</strong></a> | <a href="#A"><strong>A</strong></a> | <a href="#C"><strong>C</strong></a> | <a href="#D"><strong>D</strong></a> | <a href="#E"><strong>E</strong></a> | <a href="#G"><strong>G</strong></a> | <a href="#L"><strong>L</strong></a> | <a href="#P"><strong>P</strong></a> | <a href="#T"><strong>T</strong></a></div>
 </section>
 <section id="_" class="genindex-section">
   <h2>_</h2>
@@ -276,12 +276,10 @@
   <h2>C</h2>
   <table style="width: 100%" class="indextable genindextable"><tr>
     <td style="width: 33%; vertical-align: top;"><ul>
-        <li><a href="docs/src/_build/airflow_config.DagArgs.html#airflow_config.DagArgs.catchup">catchup (airflow_config.DagArgs attribute)</a>
+        <li><a href="docs/src/_build/airflow_config.create_dag.html#airflow_config.create_dag">create_dag() (in module airflow_config)</a>
 </li>
     </ul></td>
     <td style="width: 33%; vertical-align: top;"><ul>
-        <li><a href="docs/src/_build/airflow_config.create_dag.html#airflow_config.create_dag">create_dag() (in module airflow_config)</a>
-</li>
         <li><a href="docs/src/_build/airflow_config.create_dags.html#airflow_config.create_dags">create_dags() (in module airflow_config)</a>
 </li>
     </ul></td>
@@ -296,17 +294,13 @@
 </li>
         <li><a href="docs/src/_build/airflow_config.Configuration.html#airflow_config.Configuration.dag_args">dag_args (airflow_config.Configuration attribute)</a>
 </li>
-        <li><a href="docs/src/_build/airflow_config.DagArgs.html#airflow_config.DagArgs.dag_id">dag_id (airflow_config.DagArgs attribute)</a>
-</li>
     </ul></td>
     <td style="width: 33%; vertical-align: top;"><ul>
+        <li><a href="docs/src/_build/airflow_config.DagArgs.html#airflow_config.DagArgs.dag_id">dag_id (airflow_config.DagArgs attribute)</a>
+</li>
         <li><a href="docs/src/_build/airflow_config.Configuration.html#airflow_config.Configuration.default_args">default_args (airflow_config.Configuration attribute)</a>
 </li>
         <li><a href="docs/src/_build/airflow_config.Configuration.html#airflow_config.Configuration.default_dag_args">default_dag_args (airflow_config.Configuration attribute)</a>
-</li>
-        <li><a href="docs/src/_build/airflow_config.DagArgs.html#airflow_config.DagArgs.default_view">default_view (airflow_config.DagArgs attribute)</a>
-</li>
-        <li><a href="docs/src/_build/airflow_config.DagArgs.html#airflow_config.DagArgs.description">description (airflow_config.DagArgs attribute)</a>
 </li>
     </ul></td>
   </tr></table>
@@ -315,10 +309,6 @@
 <section id="E" class="genindex-section">
   <h2>E</h2>
   <table style="width: 100%" class="indextable genindextable"><tr>
-    <td style="width: 33%; vertical-align: top;"><ul>
-        <li><a href="docs/src/_build/airflow_config.DagArgs.html#airflow_config.DagArgs.end_date">end_date (airflow_config.DagArgs attribute)</a>
-</li>
-    </ul></td>
     <td style="width: 33%; vertical-align: top;"><ul>
         <li><a href="docs/src/_build/airflow_config.Configuration.html#airflow_config.Configuration.extensions">extensions (airflow_config.Configuration attribute)</a>
 </li>
@@ -336,31 +326,11 @@
   </tr></table>
 </section>
 
-<section id="I" class="genindex-section">
-  <h2>I</h2>
-  <table style="width: 100%" class="indextable genindextable"><tr>
-    <td style="width: 33%; vertical-align: top;"><ul>
-        <li><a href="docs/src/_build/airflow_config.DagArgs.html#airflow_config.DagArgs.is_paused_upon_creation">is_paused_upon_creation (airflow_config.DagArgs attribute)</a>
-</li>
-    </ul></td>
-  </tr></table>
-</section>
-
 <section id="L" class="genindex-section">
   <h2>L</h2>
   <table style="width: 100%" class="indextable genindextable"><tr>
     <td style="width: 33%; vertical-align: top;"><ul>
         <li><a href="docs/src/_build/airflow_config.Configuration.html#airflow_config.Configuration.load">load() (airflow_config.Configuration static method)</a>
-</li>
-    </ul></td>
-  </tr></table>
-</section>
-
-<section id="O" class="genindex-section">
-  <h2>O</h2>
-  <table style="width: 100%" class="indextable genindextable"><tr>
-    <td style="width: 33%; vertical-align: top;"><ul>
-        <li><a href="docs/src/_build/airflow_config.DagArgs.html#airflow_config.DagArgs.orientation">orientation (airflow_config.DagArgs attribute)</a>
 </li>
     </ul></td>
   </tr></table>
@@ -380,27 +350,9 @@
   </tr></table>
 </section>
 
-<section id="S" class="genindex-section">
-  <h2>S</h2>
-  <table style="width: 100%" class="indextable genindextable"><tr>
-    <td style="width: 33%; vertical-align: top;"><ul>
-        <li><a href="docs/src/_build/airflow_config.DagArgs.html#airflow_config.DagArgs.schedule">schedule (airflow_config.DagArgs attribute)</a>
-</li>
-    </ul></td>
-    <td style="width: 33%; vertical-align: top;"><ul>
-        <li><a href="docs/src/_build/airflow_config.DagArgs.html#airflow_config.DagArgs.start_date">start_date (airflow_config.DagArgs attribute)</a>
-</li>
-    </ul></td>
-  </tr></table>
-</section>
-
 <section id="T" class="genindex-section">
   <h2>T</h2>
   <table style="width: 100%" class="indextable genindextable"><tr>
-    <td style="width: 33%; vertical-align: top;"><ul>
-        <li><a href="docs/src/_build/airflow_config.DagArgs.html#airflow_config.DagArgs.tags">tags (airflow_config.DagArgs attribute)</a>
-</li>
-    </ul></td>
     <td style="width: 33%; vertical-align: top;"><ul>
         <li><a href="docs/src/_build/airflow_config.Configuration.html#airflow_config.Configuration.task_args">task_args (airflow_config.Configuration attribute)</a>
 </li>
