--- a/genindex.html
+++ b/genindex.html
@@ -250,7 +250,7 @@
           
 <section class="genindex-section">
   <h1 id="index">Index</h1>
-  <div class="genindex-jumpbox"><a href="#_"><strong>_</strong></a> | <a href="#A"><strong>A</strong></a> | <a href="#C"><strong>C</strong></a> | <a href="#D"><strong>D</strong></a> | <a href="#E"><strong>E</strong></a> | <a href="#G"><strong>G</strong></a> | <a href="#I"><strong>I</strong></a> | <a href="#L"><strong>L</strong></a> | <a href="#O"><strong>O</strong></a> | <a href="#P"><strong>P</strong></a> | <a href="#S"><strong>S</strong></a> | <a href="#T"><strong>T</strong></a></div>
+  <div class="genindex-jumpbox"><a href="#_"><strong>_</strong></a> | <a href="#A"><strong>A</strong></a> | <a href="#C"><strong>C</strong></a> | <a href="#D"><strong>D</strong></a> | <a href="#E"><strong>E</strong></a> | <a href="#G"><strong>G</strong></a> | <a href="#I"><strong>I</strong></a> | <a href="#L"><strong>L</strong></a> | <a href="#M"><strong>M</strong></a> | <a href="#O"><strong>O</strong></a> | <a href="#P"><strong>P</strong></a> | <a href="#S"><strong>S</strong></a> | <a href="#T"><strong>T</strong></a></div>
 </section>
 <section id="_" class="genindex-section">
   <h2>_</h2>
@@ -293,6 +293,8 @@
   <table style="width: 100%" class="indextable genindextable"><tr>
     <td style="width: 33%; vertical-align: top;"><ul>
         <li><a href="docs/src/_build/airflow_config.DAG.html#airflow_config.DAG">DAG (class in airflow_config)</a>
+</li>
+        <li><a href="docs/src/_build/airflow_config.DagArgs.html#airflow_config.DagArgs.dag_display_name">dag_display_name (airflow_config.DagArgs attribute)</a>
 </li>
         <li><a href="docs/src/_build/airflow_config.Configuration.html#airflow_config.Configuration.dags">dags (airflow_config.Configuration attribute)</a>
 </li>
@@ -351,6 +353,20 @@
   <table style="width: 100%" class="indextable genindextable"><tr>
     <td style="width: 33%; vertical-align: top;"><ul>
         <li><a href="docs/src/_build/airflow_config.Configuration.html#airflow_config.Configuration.load">load() (airflow_config.Configuration static method)</a>
+</li>
+    </ul></td>
+  </tr></table>
+</section>
+
+<section id="M" class="genindex-section">
+  <h2>M</h2>
+  <table style="width: 100%" class="indextable genindextable"><tr>
+    <td style="width: 33%; vertical-align: top;"><ul>
+        <li><a href="docs/src/_build/airflow_config.DagArgs.html#airflow_config.DagArgs.max_active_runs">max_active_runs (airflow_config.DagArgs attribute)</a>
+</li>
+    </ul></td>
+    <td style="width: 33%; vertical-align: top;"><ul>
+        <li><a href="docs/src/_build/airflow_config.DagArgs.html#airflow_config.DagArgs.max_active_tasks">max_active_tasks (airflow_config.DagArgs attribute)</a>
 </li>
     </ul></td>
   </tr></table>
