--- a/_modules/airflow_config/configuration/base.html
+++ b/_modules/airflow_config/configuration/base.html
@@ -368,8 +368,8 @@
             <span class="c1"># first try to see if per-dag options have default_args for subtasks</span>
             <span class="n">per_dag_kwargs</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">dags</span><span class="p">[</span><span class="n">dag_kwargs</span><span class="p">[</span><span class="s2">&quot;dag_id&quot;</span><span class="p">]]</span>
 
-            <span class="c1"># if dag is disabled, quit right away</span>
-            <span class="k">if</span> <span class="n">per_dag_kwargs</span><span class="o">.</span><span class="n">enabled</span> <span class="ow">is</span> <span class="kc">False</span><span class="p">:</span>
+            <span class="c1"># if dag is disabled directly, quit right away</span>
+            <span class="k">if</span> <span class="n">per_dag_kwargs</span><span class="o">.</span><span class="n">enabled</span> <span class="ow">is</span> <span class="kc">False</span> <span class="ow">or</span> <span class="p">(</span><span class="n">per_dag_kwargs</span><span class="o">.</span><span class="n">enabled</span> <span class="ow">is</span> <span class="kc">None</span> <span class="ow">and</span> <span class="bp">self</span><span class="o">.</span><span class="n">default_dag_args</span><span class="o">.</span><span class="n">enabled</span> <span class="ow">is</span> <span class="kc">False</span><span class="p">):</span>
                 <span class="n">sys</span><span class="o">.</span><span class="n">exit</span><span class="p">(</span><span class="mi">0</span><span class="p">)</span>
 
             <span class="n">default_args</span> <span class="o">=</span> <span class="n">per_dag_kwargs</span><span class="o">.</span><span class="n">default_args</span>
@@ -378,7 +378,7 @@
                     <span class="n">dag_kwargs</span><span class="p">[</span><span class="s2">&quot;default_args&quot;</span><span class="p">][</span><span class="n">attr</span><span class="p">]</span> <span class="o">=</span> <span class="nb">getattr</span><span class="p">(</span><span class="n">default_args</span><span class="p">,</span> <span class="n">attr</span><span class="p">)</span>
 
             <span class="k">for</span> <span class="n">attr</span> <span class="ow">in</span> <span class="n">DagArgs</span><span class="o">.</span><span class="n">model_fields</span><span class="p">:</span>
-                <span class="k">if</span> <span class="n">attr</span> <span class="o">==</span> <span class="s2">&quot;default_args&quot;</span><span class="p">:</span>
+                <span class="k">if</span> <span class="n">attr</span> <span class="ow">in</span> <span class="p">(</span><span class="s2">&quot;default_args&quot;</span><span class="p">,</span> <span class="s2">&quot;enabled&quot;</span><span class="p">):</span>
                     <span class="c1"># skip</span>
                     <span class="k">continue</span>
                 <span class="k">if</span> <span class="n">attr</span> <span class="o">==</span> <span class="s2">&quot;dag_id&quot;</span><span class="p">:</span>
@@ -391,12 +391,16 @@
                 <span class="k">if</span> <span class="n">attr</span> <span class="ow">not</span> <span class="ow">in</span> <span class="n">dag_kwargs</span> <span class="ow">and</span> <span class="n">val</span><span class="p">:</span>
                     <span class="n">dag_kwargs</span><span class="p">[</span><span class="n">attr</span><span class="p">]</span> <span class="o">=</span> <span class="n">val</span>
 
+        <span class="k">elif</span> <span class="bp">self</span><span class="o">.</span><span class="n">default_dag_args</span><span class="o">.</span><span class="n">enabled</span> <span class="ow">is</span> <span class="kc">False</span><span class="p">:</span>
+            <span class="c1"># if dag has no per-dag-config, but default dag args is disabled, quit right away</span>
+            <span class="n">sys</span><span class="o">.</span><span class="n">exit</span><span class="p">(</span><span class="mi">0</span><span class="p">)</span>
+
         <span class="k">for</span> <span class="n">attr</span> <span class="ow">in</span> <span class="n">TaskArgs</span><span class="o">.</span><span class="n">model_fields</span><span class="p">:</span>
             <span class="k">if</span> <span class="n">attr</span> <span class="ow">not</span> <span class="ow">in</span> <span class="n">dag_kwargs</span><span class="p">[</span><span class="s2">&quot;default_args&quot;</span><span class="p">]</span> <span class="ow">and</span> <span class="nb">getattr</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">default_args</span><span class="p">,</span> <span class="n">attr</span><span class="p">,</span> <span class="kc">None</span><span class="p">)</span> <span class="ow">is</span> <span class="ow">not</span> <span class="kc">None</span><span class="p">:</span>
                 <span class="n">dag_kwargs</span><span class="p">[</span><span class="s2">&quot;default_args&quot;</span><span class="p">][</span><span class="n">attr</span><span class="p">]</span> <span class="o">=</span> <span class="nb">getattr</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">default_args</span><span class="p">,</span> <span class="n">attr</span><span class="p">)</span>
 
         <span class="k">for</span> <span class="n">attr</span> <span class="ow">in</span> <span class="n">DagArgs</span><span class="o">.</span><span class="n">model_fields</span><span class="p">:</span>
-            <span class="k">if</span> <span class="n">attr</span> <span class="ow">not</span> <span class="ow">in</span> <span class="n">dag_kwargs</span><span class="p">:</span>
+            <span class="k">if</span> <span class="n">attr</span> <span class="ow">not</span> <span class="ow">in</span> <span class="n">dag_kwargs</span> <span class="ow">and</span> <span class="n">attr</span> <span class="ow">not</span> <span class="ow">in</span> <span class="p">(</span><span class="s2">&quot;enabled&quot;</span><span class="p">,):</span>
                 <span class="n">val</span> <span class="o">=</span> <span class="nb">getattr</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">default_dag_args</span><span class="p">,</span> <span class="n">attr</span><span class="p">,</span> <span class="kc">None</span><span class="p">)</span>
                 <span class="k">if</span> <span class="n">attr</span> <span class="ow">not</span> <span class="ow">in</span> <span class="n">dag_kwargs</span> <span class="ow">and</span> <span class="n">val</span> <span class="ow">is</span> <span class="ow">not</span> <span class="kc">None</span><span class="p">:</span>
                     <span class="n">dag_kwargs</span><span class="p">[</span><span class="n">attr</span><span class="p">]</span> <span class="o">=</span> <span class="n">val</span></div>
