deploy: 66285fbf2d056fd17fd609cd0ce025d1021772b2

--- a/_modules/index.html
+++ b/_modules/index.html
@@ -248,9 +248,9 @@
         </div>
         <article role="main" id="furo-main-content">
           <h1>All modules for which code is available</h1>
-<ul><li><a href="airflow_config/configuration/airflow.html">airflow_config.configuration.airflow</a></li>
-<li><a href="airflow_config/configuration/base.html">airflow_config.configuration.base</a></li>
+<ul><li><a href="airflow_config/configuration/base.html">airflow_config.configuration.base</a></li>
 <li><a href="airflow_config/dag.html">airflow_config.dag</a></li>
+<li><a href="airflow_pydantic/dag.html">airflow_pydantic.dag</a></li>
 </ul>
         </article>
       </div>
