--- a/_modules/airflow_config/configuration/base.html
+++ b/_modules/airflow_config/configuration/base.html
@@ -253,11 +253,11 @@
 <span class="kn">from</span><span class="w"> </span><span class="nn">pathlib</span><span class="w"> </span><span class="kn">import</span> <span class="n">Path</span>
 <span class="kn">from</span><span class="w"> </span><span class="nn">typing</span><span class="w"> </span><span class="kn">import</span> <span class="n">Dict</span><span class="p">,</span> <span class="n">Optional</span>
 
+<span class="kn">from</span><span class="w"> </span><span class="nn">airflow_pydantic</span><span class="w"> </span><span class="kn">import</span> <span class="n">Dag</span><span class="p">,</span> <span class="n">DagArgs</span><span class="p">,</span> <span class="n">Task</span><span class="p">,</span> <span class="n">TaskArgs</span>
 <span class="kn">from</span><span class="w"> </span><span class="nn">hydra</span><span class="w"> </span><span class="kn">import</span> <span class="n">compose</span><span class="p">,</span> <span class="n">initialize_config_dir</span>
 <span class="kn">from</span><span class="w"> </span><span class="nn">hydra.utils</span><span class="w"> </span><span class="kn">import</span> <span class="n">instantiate</span>
 <span class="kn">from</span><span class="w"> </span><span class="nn">pydantic</span><span class="w"> </span><span class="kn">import</span> <span class="n">BaseModel</span><span class="p">,</span> <span class="n">Field</span>
 
-<span class="kn">from</span><span class="w"> </span><span class="nn">airflow_config.configuration.airflow</span><span class="w"> </span><span class="kn">import</span> <span class="n">Dag</span><span class="p">,</span> <span class="n">DagArgs</span><span class="p">,</span> <span class="n">Task</span><span class="p">,</span> <span class="n">TaskArgs</span>
 <span class="kn">from</span><span class="w"> </span><span class="nn">airflow_config.exceptions</span><span class="w"> </span><span class="kn">import</span> <span class="n">ConfigNotFoundError</span>
 <span class="kn">from</span><span class="w"> </span><span class="nn">airflow_config.utils</span><span class="w"> </span><span class="kn">import</span> <span class="n">_get_calling_dag</span>
 
