--- a/_modules/airflow_config/configuration/base.html
+++ b/_modules/airflow_config/configuration/base.html
@@ -4,8 +4,8 @@
     <meta name="viewport" content="width=device-width,initial-scale=1"/>
     <meta name="color-scheme" content="light dark"><link rel="index" title="Index" href="../../../genindex.html" /><link rel="search" title="Search" href="../../../search.html" />
 
-    <!-- Generated with Sphinx 8.2.0 and Furo 2024.08.06 -->
-        <title>airflow_config.configuration.base - airflow-config v1.2.0</title>
+    <!-- Generated with Sphinx 8.2.1 and Furo 2024.08.06 -->
+        <title>airflow_config.configuration.base - airflow-config v1.3.0</title>
       <link rel="stylesheet" type="text/css" href="../../../_static/pygments.css?v=03e43079" />
     <link rel="stylesheet" type="text/css" href="../../../_static/styles/furo.css?v=354aac6f" />
     <link rel="stylesheet" type="text/css" href="../../../_static/mystnb.4510f1fc1dee50b3e5859aac5469c37c29e427902b24a333a5f9fcb2f0b3ac41.css" />
@@ -171,7 +171,7 @@
       </label>
     </div>
     <div class="header-center">
-      <a href="../../../index.html"><div class="brand">airflow-config <code style='font-size: var(--font-size--small--4);color: var(--sd-color-primary);'>v1.2.0</code></div></a>
+      <a href="../../../index.html"><div class="brand">airflow-config <code style='font-size: var(--font-size--small--4);color: var(--sd-color-primary);'>v1.3.0</code></div></a>
     </div>
     <div class="header-right">
       <div class="theme-toggle-container theme-toggle-header">
@@ -195,7 +195,7 @@
       <div class="sidebar-sticky"><a class="sidebar-brand" href="../../../index.html">
   
   
-  <span class="sidebar-brand-text">airflow-config <code style='font-size: var(--font-size--small--4);color: var(--sd-color-primary);'>v1.2.0</code></span>
+  <span class="sidebar-brand-text">airflow-config <code style='font-size: var(--font-size--small--4);color: var(--sd-color-primary);'>v1.3.0</code></span>
   
 </a><form class="sidebar-search-container" method="get" action="../../../search.html" role="search">
   <input class="sidebar-search" placeholder="Search" name="q" aria-label="Search">
@@ -360,22 +360,18 @@
     <span class="k">def</span><span class="w"> </span><span class="nf">pre_apply</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">dag</span><span class="p">,</span> <span class="n">dag_kwargs</span><span class="p">):</span>
         <span class="c1"># update options in config based on hard-coded overrides</span>
         <span class="c1"># in the DAG file itself</span>
-        <span class="k">if</span> <span class="s2">&quot;default_args&quot;</span> <span class="ow">not</span> <span class="ow">in</span> <span class="n">dag_kwargs</span><span class="p">:</span>
-            <span class="n">dag_kwargs</span><span class="p">[</span><span class="s2">&quot;default_args&quot;</span><span class="p">]</span> <span class="o">=</span> <span class="p">{}</span>
+        <span class="n">per_dag_default_args</span> <span class="o">=</span> <span class="p">{}</span>
 
         <span class="c1"># look up per-dag options</span>
         <span class="k">if</span> <span class="n">dag_kwargs</span><span class="o">.</span><span class="n">get</span><span class="p">(</span><span class="s2">&quot;dag_id&quot;</span><span class="p">,</span> <span class="kc">None</span><span class="p">)</span> <span class="ow">in</span> <span class="bp">self</span><span class="o">.</span><span class="n">dags</span><span class="p">:</span>
             <span class="c1"># first try to see if per-dag options have default_args for subtasks</span>
             <span class="n">per_dag_kwargs</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">dags</span><span class="p">[</span><span class="n">dag_kwargs</span><span class="p">[</span><span class="s2">&quot;dag_id&quot;</span><span class="p">]]</span>
 
+            <span class="n">per_dag_default_args</span> <span class="o">=</span> <span class="n">per_dag_kwargs</span><span class="o">.</span><span class="n">default_args</span>
+
             <span class="c1"># if dag is disabled directly, quit right away</span>
             <span class="k">if</span> <span class="n">per_dag_kwargs</span><span class="o">.</span><span class="n">enabled</span> <span class="ow">is</span> <span class="kc">False</span> <span class="ow">or</span> <span class="p">(</span><span class="n">per_dag_kwargs</span><span class="o">.</span><span class="n">enabled</span> <span class="ow">is</span> <span class="kc">None</span> <span class="ow">and</span> <span class="bp">self</span><span class="o">.</span><span class="n">default_dag_args</span><span class="o">.</span><span class="n">enabled</span> <span class="ow">is</span> <span class="kc">False</span><span class="p">):</span>
                 <span class="n">sys</span><span class="o">.</span><span class="n">exit</span><span class="p">(</span><span class="mi">0</span><span class="p">)</span>
-
-            <span class="n">default_args</span> <span class="o">=</span> <span class="n">per_dag_kwargs</span><span class="o">.</span><span class="n">default_args</span>
-            <span class="k">for</span> <span class="n">attr</span> <span class="ow">in</span> <span class="n">TaskArgs</span><span class="o">.</span><span class="n">model_fields</span><span class="p">:</span>
-                <span class="k">if</span> <span class="n">attr</span> <span class="ow">not</span> <span class="ow">in</span> <span class="n">dag_kwargs</span><span class="p">[</span><span class="s2">&quot;default_args&quot;</span><span class="p">]</span> <span class="ow">and</span> <span class="nb">getattr</span><span class="p">(</span><span class="n">default_args</span><span class="p">,</span> <span class="n">attr</span><span class="p">,</span> <span class="kc">None</span><span class="p">):</span>
-                    <span class="n">dag_kwargs</span><span class="p">[</span><span class="s2">&quot;default_args&quot;</span><span class="p">][</span><span class="n">attr</span><span class="p">]</span> <span class="o">=</span> <span class="nb">getattr</span><span class="p">(</span><span class="n">default_args</span><span class="p">,</span> <span class="n">attr</span><span class="p">)</span>
 
             <span class="k">for</span> <span class="n">attr</span> <span class="ow">in</span> <span class="n">DagArgs</span><span class="o">.</span><span class="n">model_fields</span><span class="p">:</span>
                 <span class="k">if</span> <span class="n">attr</span> <span class="ow">in</span> <span class="p">(</span><span class="s2">&quot;default_args&quot;</span><span class="p">,</span> <span class="s2">&quot;enabled&quot;</span><span class="p">):</span>
@@ -390,14 +386,29 @@
 
                 <span class="k">if</span> <span class="n">attr</span> <span class="ow">not</span> <span class="ow">in</span> <span class="n">dag_kwargs</span> <span class="ow">and</span> <span class="n">val</span><span class="p">:</span>
                     <span class="n">dag_kwargs</span><span class="p">[</span><span class="n">attr</span><span class="p">]</span> <span class="o">=</span> <span class="n">val</span>
-
         <span class="k">elif</span> <span class="bp">self</span><span class="o">.</span><span class="n">default_dag_args</span><span class="o">.</span><span class="n">enabled</span> <span class="ow">is</span> <span class="kc">False</span><span class="p">:</span>
             <span class="c1"># if dag has no per-dag-config, but default dag args is disabled, quit right away</span>
             <span class="n">sys</span><span class="o">.</span><span class="n">exit</span><span class="p">(</span><span class="mi">0</span><span class="p">)</span>
 
+        <span class="c1"># start with empty default_args</span>
+        <span class="n">default_args</span> <span class="o">=</span> <span class="p">{}</span>
+
+        <span class="c1"># First, override with global defaults specified in config</span>
         <span class="k">for</span> <span class="n">attr</span> <span class="ow">in</span> <span class="n">TaskArgs</span><span class="o">.</span><span class="n">model_fields</span><span class="p">:</span>
-            <span class="k">if</span> <span class="n">attr</span> <span class="ow">not</span> <span class="ow">in</span> <span class="n">dag_kwargs</span><span class="p">[</span><span class="s2">&quot;default_args&quot;</span><span class="p">]</span> <span class="ow">and</span> <span class="nb">getattr</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">default_args</span><span class="p">,</span> <span class="n">attr</span><span class="p">,</span> <span class="kc">None</span><span class="p">)</span> <span class="ow">is</span> <span class="ow">not</span> <span class="kc">None</span><span class="p">:</span>
-                <span class="n">dag_kwargs</span><span class="p">[</span><span class="s2">&quot;default_args&quot;</span><span class="p">][</span><span class="n">attr</span><span class="p">]</span> <span class="o">=</span> <span class="nb">getattr</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">default_args</span><span class="p">,</span> <span class="n">attr</span><span class="p">)</span>
+            <span class="k">if</span> <span class="nb">getattr</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">default_args</span><span class="p">,</span> <span class="n">attr</span><span class="p">,</span> <span class="kc">None</span><span class="p">)</span> <span class="ow">is</span> <span class="ow">not</span> <span class="kc">None</span><span class="p">:</span>
+                <span class="n">default_args</span><span class="p">[</span><span class="n">attr</span><span class="p">]</span> <span class="o">=</span> <span class="nb">getattr</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">default_args</span><span class="p">,</span> <span class="n">attr</span><span class="p">)</span>
+
+        <span class="c1"># Next, update with per-dag defaults specified in config</span>
+        <span class="k">for</span> <span class="n">attr</span> <span class="ow">in</span> <span class="n">TaskArgs</span><span class="o">.</span><span class="n">model_fields</span><span class="p">:</span>
+            <span class="k">if</span> <span class="nb">getattr</span><span class="p">(</span><span class="n">per_dag_default_args</span><span class="p">,</span> <span class="n">attr</span><span class="p">,</span> <span class="kc">None</span><span class="p">)</span> <span class="ow">is</span> <span class="ow">not</span> <span class="kc">None</span><span class="p">:</span>
+                <span class="n">default_args</span><span class="p">[</span><span class="n">attr</span><span class="p">]</span> <span class="o">=</span> <span class="nb">getattr</span><span class="p">(</span><span class="n">per_dag_default_args</span><span class="p">,</span> <span class="n">attr</span><span class="p">)</span>
+
+        <span class="c1"># Finally, override with args hardcoded in the DAG file</span>
+        <span class="k">if</span> <span class="s2">&quot;default_args&quot;</span> <span class="ow">in</span> <span class="n">dag_kwargs</span><span class="p">:</span>
+            <span class="n">default_args</span><span class="o">.</span><span class="n">update</span><span class="p">(</span><span class="n">dag_kwargs</span><span class="o">.</span><span class="n">get</span><span class="p">(</span><span class="s2">&quot;default_args&quot;</span><span class="p">,</span> <span class="p">{}))</span>
+
+        <span class="c1"># update the dag_kwargs with the final default_args</span>
+        <span class="n">dag_kwargs</span><span class="p">[</span><span class="s2">&quot;default_args&quot;</span><span class="p">]</span> <span class="o">=</span> <span class="n">default_args</span>
 
         <span class="k">for</span> <span class="n">attr</span> <span class="ow">in</span> <span class="n">DagArgs</span><span class="o">.</span><span class="n">model_fields</span><span class="p">:</span>
             <span class="k">if</span> <span class="n">attr</span> <span class="ow">not</span> <span class="ow">in</span> <span class="n">dag_kwargs</span> <span class="ow">and</span> <span class="n">attr</span> <span class="ow">not</span> <span class="ow">in</span> <span class="p">(</span><span class="s2">&quot;enabled&quot;</span><span class="p">,):</span>
@@ -420,7 +431,6 @@
                     <span class="n">task_insts</span><span class="p">[</span><span class="n">task_id</span><span class="p">]</span> <span class="o">=</span> <span class="n">task_inst</span><span class="o">.</span><span class="n">instantiate</span><span class="p">(</span><span class="n">dag</span><span class="o">=</span><span class="n">dag</span><span class="p">)</span>
             <span class="k">for</span> <span class="n">task_id</span><span class="p">,</span> <span class="n">task_inst</span> <span class="ow">in</span> <span class="n">task_insts</span><span class="o">.</span><span class="n">items</span><span class="p">():</span>
                 <span class="n">task_deps</span> <span class="o">=</span> <span class="n">tasks</span><span class="p">[</span><span class="n">task_id</span><span class="p">]</span><span class="o">.</span><span class="n">dependencies</span>
-                <span class="nb">print</span><span class="p">(</span><span class="n">task_insts</span><span class="p">)</span>
                 <span class="k">if</span> <span class="n">task_deps</span><span class="p">:</span>
                     <span class="k">for</span> <span class="n">dep</span> <span class="ow">in</span> <span class="n">task_deps</span><span class="p">:</span>
                         <span class="n">task_insts</span><span class="p">[</span><span class="n">dep</span><span class="p">]</span> <span class="o">&gt;&gt;</span> <span class="n">task_inst</span></div>
@@ -461,7 +471,7 @@
       
     </aside>
   </div>
-</div><script src="../../../_static/documentation_options.js?v=6efca38a"></script>
+</div><script src="../../../_static/documentation_options.js?v=1f29e9d3"></script>
     <script src="../../../_static/doctools.js?v=9bcbadda"></script>
     <script src="../../../_static/sphinx_highlight.js?v=dc90522c"></script>
     <script src="../../../_static/scripts/furo.js?v=5fa4622c"></script>
