deploy: 9a3ce818785c8cf037a983b9fafc0f70af3feab6

--- a/genindex.html
+++ b/genindex.html
@@ -335,6 +335,10 @@
   <h2>G</h2>
   <table style="width: 100%" class="indextable genindextable"><tr>
     <td style="width: 33%; vertical-align: top;"><ul>
+        <li><a href="docs/src/_build/airflow_config.Configuration.html#airflow_config.Configuration.generate">generate() (airflow_config.Configuration method)</a>
+</li>
+    </ul></td>
+    <td style="width: 33%; vertical-align: top;"><ul>
         <li><a href="docs/src/_build/airflow_config.generate_dag_id.html#airflow_config.generate_dag_id">generate_dag_id() (in module airflow_config)</a>
 </li>
     </ul></td>
