--- a/_modules/airflow_config/configuration/base.html
+++ b/_modules/airflow_config/configuration/base.html
@@ -350,6 +350,14 @@
 
             <span class="k">if</span> <span class="ow">not</span> <span class="nb">isinstance</span><span class="p">(</span><span class="n">config</span><span class="p">,</span> <span class="n">Configuration</span><span class="p">):</span>
                 <span class="n">config</span> <span class="o">=</span> <span class="n">Configuration</span><span class="p">(</span><span class="o">**</span><span class="n">config</span><span class="p">)</span>
+
+            <span class="c1"># Populate dag ids and task ids as a convenience</span>
+            <span class="k">for</span> <span class="n">dag_id</span><span class="p">,</span> <span class="n">dag</span> <span class="ow">in</span> <span class="n">config</span><span class="o">.</span><span class="n">dags</span><span class="o">.</span><span class="n">items</span><span class="p">():</span>
+                <span class="k">if</span> <span class="ow">not</span> <span class="n">dag</span><span class="o">.</span><span class="n">dag_id</span><span class="p">:</span>
+                    <span class="n">dag</span><span class="o">.</span><span class="n">dag_id</span> <span class="o">=</span> <span class="n">dag_id</span>
+                <span class="k">for</span> <span class="n">task_id</span><span class="p">,</span> <span class="n">task</span> <span class="ow">in</span> <span class="n">dag</span><span class="o">.</span><span class="n">tasks</span><span class="o">.</span><span class="n">items</span><span class="p">():</span>
+                    <span class="k">if</span> <span class="ow">not</span> <span class="n">task</span><span class="o">.</span><span class="n">task_id</span><span class="p">:</span>
+                        <span class="n">task</span><span class="o">.</span><span class="n">task_id</span> <span class="o">=</span> <span class="n">task_id</span>
             <span class="k">return</span> <span class="n">config</span></div>
 
 
@@ -432,6 +440,16 @@
                 <span class="k">if</span> <span class="n">task_deps</span><span class="p">:</span>
                     <span class="k">for</span> <span class="n">dep</span> <span class="ow">in</span> <span class="n">task_deps</span><span class="p">:</span>
                         <span class="n">task_insts</span><span class="p">[</span><span class="n">dep</span><span class="p">]</span> <span class="o">&gt;&gt;</span> <span class="n">task_inst</span></div>
+
+
+<div class="viewcode-block" id="Configuration.generate">
+<a class="viewcode-back" href="../../../docs/src/_build/airflow_config.Configuration.html#airflow_config.Configuration.generate">[docs]</a>
+    <span class="k">def</span><span class="w"> </span><span class="nf">generate</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="nb">dir</span><span class="p">):</span>
+        <span class="n">dir_path</span> <span class="o">=</span> <span class="n">Path</span><span class="p">(</span><span class="nb">dir</span><span class="p">)</span>
+        <span class="n">dir_path</span><span class="o">.</span><span class="n">mkdir</span><span class="p">(</span><span class="n">parents</span><span class="o">=</span><span class="kc">True</span><span class="p">,</span> <span class="n">exist_ok</span><span class="o">=</span><span class="kc">True</span><span class="p">)</span>
+        <span class="k">for</span> <span class="n">dag_id</span><span class="p">,</span> <span class="n">dag</span> <span class="ow">in</span> <span class="bp">self</span><span class="o">.</span><span class="n">dags</span><span class="o">.</span><span class="n">items</span><span class="p">():</span>
+            <span class="n">dag_path</span> <span class="o">=</span> <span class="n">dir_path</span> <span class="o">/</span> <span class="sa">f</span><span class="s2">&quot;</span><span class="si">{</span><span class="n">dag_id</span><span class="si">}</span><span class="s2">.py&quot;</span>
+            <span class="n">dag_path</span><span class="o">.</span><span class="n">write_text</span><span class="p">(</span><span class="n">dag</span><span class="o">.</span><span class="n">render</span><span class="p">())</span></div>
 </div>
 
 
